[gd_scene load_steps=32 format=2]

[ext_resource path="res://images/Floor 4.png" type="Texture" id=1]
[ext_resource path="res://images/Janela recepção.jpeg" type="Texture" id=2]
[ext_resource path="res://MainPersonagemMVP.tscn" type="PackedScene" id=3]
[ext_resource path="res://images/main Wall.png" type="Texture" id=4]
[ext_resource path="res://images/elevador para o jogo.jpeg" type="Texture" id=5]
[ext_resource path="res://images/mesa-recepçãoo.png" type="Texture" id=6]
[ext_resource path="res://images/mesarecp.png" type="Texture" id=7]
[ext_resource path="res://images/mesarecepcaooo.png" type="Texture" id=8]
[ext_resource path="res://images/imagem personagem 2 frente (1).png" type="Texture" id=9]
[ext_resource path="res://images/cacto resized.png" type="Texture" id=10]
[ext_resource path="res://images/Sofá_recepcao_1_resized.png" type="Texture" id=11]
[ext_resource path="res://craftpix-net-753737-free-green-zone-tileset-pixel-art/3 Objects/Other/Box.png" type="Texture" id=12]
[ext_resource path="res://images/door_outside_resized.png" type="Texture" id=13]
[ext_resource path="res://Scripts/Passagem.gd" type="Script" id=14]
[ext_resource path="res://images/Door_new.png" type="Texture" id=15]
[ext_resource path="res://images/Double_door_outside.png" type="Texture" id=16]
[ext_resource path="res://Scripts/Area2D2.gd" type="Script" id=17]
[ext_resource path="res://PauseMenu.tscn" type="PackedScene" id=18]
[ext_resource path="res://Scripts/Area_Recepcionista.gd" type="Script" id=19]
[ext_resource path="res://images/Floor 1.png" type="Texture" id=20]
[ext_resource path="res://images/Wall 4 Light.png" type="Texture" id=21]
[ext_resource path="res://images/Wall 3.png" type="Texture" id=22]
[ext_resource path="res://images/Parede_laranja.png" type="Texture" id=23]
[ext_resource path="res://Popups.tscn" type="PackedScene" id=24]

[sub_resource type="TileSet" id=3]
0/name = "Floor 4.png 0"
0/texture = ExtResource( 1 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 64, 64 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
2/name = "main Wall.png 2"
2/texture = ExtResource( 4 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 0, 0, 64, 64 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape_one_way = false
2/shape_one_way_margin = 0.0
2/shapes = [  ]
2/z_index = 0
3/name = "elevador para o jogo.jpeg 3"
3/texture = ExtResource( 5 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 0, 0, 128, 128 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape_one_way = false
3/shape_one_way_margin = 0.0
3/shapes = [  ]
3/z_index = 0
4/name = "Janela recepção.jpeg 4"
4/texture = ExtResource( 2 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 0, 0, 128, 64 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shape_offset = Vector2( 0, 0 )
4/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
4/shape_one_way = false
4/shape_one_way_margin = 0.0
4/shapes = [  ]
4/z_index = -1
5/name = "Janela recepção.jpeg 5"
5/texture = ExtResource( 2 )
5/tex_offset = Vector2( 0, 0 )
5/modulate = Color( 1, 1, 1, 1 )
5/region = Rect2( 0, 0, 64, 64 )
5/tile_mode = 0
5/occluder_offset = Vector2( 0, 0 )
5/navigation_offset = Vector2( 0, 0 )
5/shape_offset = Vector2( 0, 0 )
5/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
5/shape_one_way = false
5/shape_one_way_margin = 0.0
5/shapes = [  ]
5/z_index = -1
6/name = "mesa-recepçãoo.png 6"
6/texture = ExtResource( 6 )
6/tex_offset = Vector2( 0, 0 )
6/modulate = Color( 1, 1, 1, 1 )
6/region = Rect2( 0, 0, 128, 64 )
6/tile_mode = 0
6/occluder_offset = Vector2( 0, 0 )
6/navigation_offset = Vector2( 0, 0 )
6/shape_offset = Vector2( 0, 0 )
6/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
6/shape_one_way = false
6/shape_one_way_margin = 0.0
6/shapes = [  ]
6/z_index = 1
7/name = "mesarecp.png 7"
7/texture = ExtResource( 7 )
7/tex_offset = Vector2( 0, 0 )
7/modulate = Color( 1, 1, 1, 1 )
7/region = Rect2( 0, 0, 128, 64 )
7/tile_mode = 0
7/occluder_offset = Vector2( 0, 0 )
7/navigation_offset = Vector2( 0, 0 )
7/shape_offset = Vector2( 0, 0 )
7/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
7/shape_one_way = false
7/shape_one_way_margin = 0.0
7/shapes = [  ]
7/z_index = 0
8/name = "mesarecepcaooo.png 8"
8/texture = ExtResource( 8 )
8/tex_offset = Vector2( 0, 0 )
8/modulate = Color( 1, 1, 1, 1 )
8/region = Rect2( 0, 0, 128, 64 )
8/tile_mode = 0
8/occluder_offset = Vector2( 0, 0 )
8/navigation_offset = Vector2( 0, 0 )
8/shape_offset = Vector2( 0, 0 )
8/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
8/shape_one_way = false
8/shape_one_way_margin = 0.0
8/shapes = [  ]
8/z_index = 0
9/name = "cacto resized.png 9"
9/texture = ExtResource( 10 )
9/tex_offset = Vector2( 2.5, 5 )
9/modulate = Color( 1, 1, 1, 1 )
9/region = Rect2( 0, 0, 64, 64 )
9/tile_mode = 0
9/occluder_offset = Vector2( 0, 0 )
9/navigation_offset = Vector2( 0, 0 )
9/shape_offset = Vector2( 0, 0 )
9/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
9/shape_one_way = false
9/shape_one_way_margin = 0.0
9/shapes = [  ]
9/z_index = 0
10/name = "Sofá_recepcao_1_resized.png 10"
10/texture = ExtResource( 11 )
10/tex_offset = Vector2( 0, 5 )
10/modulate = Color( 1, 1, 1, 1 )
10/region = Rect2( 64, 0, 64, 64 )
10/tile_mode = 0
10/occluder_offset = Vector2( 0, 0 )
10/navigation_offset = Vector2( 0, 0 )
10/shape_offset = Vector2( 0, 0 )
10/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
10/shape_one_way = false
10/shape_one_way_margin = 0.0
10/shapes = [  ]
10/z_index = 0
11/name = "Sofá_recepcao_1_resized.png 11"
11/texture = ExtResource( 11 )
11/tex_offset = Vector2( 0, 5 )
11/modulate = Color( 1, 1, 1, 1 )
11/region = Rect2( 0, 0, 64, 64 )
11/tile_mode = 0
11/occluder_offset = Vector2( 0, 0 )
11/navigation_offset = Vector2( 0, 0 )
11/shape_offset = Vector2( 0, 0 )
11/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
11/shape_one_way = false
11/shape_one_way_margin = 0.0
11/shapes = [  ]
11/z_index = 0
12/name = "Door_new.png 12"
12/texture = ExtResource( 15 )
12/tex_offset = Vector2( 0, 0 )
12/modulate = Color( 1, 1, 1, 1 )
12/region = Rect2( 0, 0, 32, 64 )
12/tile_mode = 0
12/occluder_offset = Vector2( 0, 0 )
12/navigation_offset = Vector2( 0, 0 )
12/shape_offset = Vector2( 0, 0 )
12/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
12/shape_one_way = false
12/shape_one_way_margin = 0.0
12/shapes = [  ]
12/z_index = 0
13/name = "door_outside_resized.png 13"
13/texture = ExtResource( 13 )
13/tex_offset = Vector2( 0, 0 )
13/modulate = Color( 1, 1, 1, 1 )
13/region = Rect2( 0, 0, 64, 128 )
13/tile_mode = 0
13/occluder_offset = Vector2( 0, 0 )
13/navigation_offset = Vector2( 0, 0 )
13/shape_offset = Vector2( 0, 0 )
13/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
13/shape_one_way = false
13/shape_one_way_margin = 0.0
13/shapes = [  ]
13/z_index = 0
14/name = "Double_door_outside.png 14"
14/texture = ExtResource( 16 )
14/tex_offset = Vector2( 0, 0 )
14/modulate = Color( 1, 1, 1, 1 )
14/region = Rect2( 0, 0, 128, 128 )
14/tile_mode = 0
14/occluder_offset = Vector2( 0, 0 )
14/navigation_offset = Vector2( 0, 0 )
14/shape_offset = Vector2( 0, 0 )
14/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
14/shape_one_way = false
14/shape_one_way_margin = 0.0
14/shapes = [  ]
14/z_index = 0
15/name = "Floor 1.png 15"
15/texture = ExtResource( 20 )
15/tex_offset = Vector2( 0, 0 )
15/modulate = Color( 1, 1, 1, 1 )
15/region = Rect2( 0, 0, 64, 32 )
15/tile_mode = 0
15/occluder_offset = Vector2( 0, 0 )
15/navigation_offset = Vector2( 0, 0 )
15/shape_offset = Vector2( 0, 0 )
15/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
15/shape_one_way = false
15/shape_one_way_margin = 0.0
15/shapes = [  ]
15/z_index = 0
16/name = "Wall 4 Light.png 16"
16/texture = ExtResource( 21 )
16/tex_offset = Vector2( 0, 0 )
16/modulate = Color( 1, 1, 1, 1 )
16/region = Rect2( 0, 0, 128, 128 )
16/tile_mode = 0
16/occluder_offset = Vector2( 0, 0 )
16/navigation_offset = Vector2( 0, 0 )
16/shape_offset = Vector2( 0, 0 )
16/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
16/shape_one_way = false
16/shape_one_way_margin = 0.0
16/shapes = [  ]
16/z_index = 0
17/name = "Wall 3.png 17"
17/texture = ExtResource( 22 )
17/tex_offset = Vector2( 0, 0 )
17/modulate = Color( 1, 1, 1, 1 )
17/region = Rect2( 0, 0, 64, 64 )
17/tile_mode = 0
17/occluder_offset = Vector2( 0, 0 )
17/navigation_offset = Vector2( 0, 0 )
17/shape_offset = Vector2( 0, 0 )
17/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
17/shape_one_way = false
17/shape_one_way_margin = 0.0
17/shapes = [  ]
17/z_index = 0
18/name = "Parede_laranja.png 18"
18/texture = ExtResource( 23 )
18/tex_offset = Vector2( 0, 0 )
18/modulate = Color( 1, 1, 1, 1 )
18/region = Rect2( 0, 0, 64, 64 )
18/tile_mode = 0
18/occluder_offset = Vector2( 0, 0 )
18/navigation_offset = Vector2( 0, 0 )
18/shape_offset = Vector2( 0, 0 )
18/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
18/shape_one_way = false
18/shape_one_way_margin = 0.0
18/shapes = [  ]
18/z_index = 0

[sub_resource type="TileSet" id=2]
0/name = "main Wall.png 0"
0/texture = ExtResource( 4 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 64, 64 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "Wall 3.png 1"
1/texture = ExtResource( 22 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 0, 64, 64 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0
2/name = "Parede_laranja.png 2"
2/texture = ExtResource( 23 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 0, 0, 64, 64 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape_one_way = false
2/shape_one_way_margin = 0.0
2/shapes = [  ]
2/z_index = 0

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 64, 49 )

[sub_resource type="SegmentShape2D" id=8]
b = Vector2( 1, 656 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 54, 63.5 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 34.5, 50 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 639.125, 15.625 )

[node name="Node2D" type="Node2D"]
pause_mode = 1

[node name="TileMap_Ground_Floor" type="TileMap" parent="."]
tile_set = SubResource( 3 )
format = 1
tile_data = PoolIntArray( 0, 18, 0, 1, 18, 0, 2, 18, 0, 3, 18, 0, 4, 18, 0, 5, 18, 0, 6, 18, 0, 7, 18, 0, 8, 18, 0, 9, 18, 0, 10, 18, 0, 11, 18, 0, 12, 18, 0, 13, 18, 0, 14, 18, 0, 15, 18, 0, 16, 18, 0, 17, 18, 0, 18, 18, 0, 19, 18, 0, 65536, 18, 0, 65537, 18, 0, 65538, 18, 0, 65539, 18, 0, 65540, 18, 0, 65541, 18, 0, 65542, 18, 0, 65543, 18, 0, 65544, 18, 0, 65545, 18, 0, 65546, 18, 0, 65547, 18, 0, 65548, 18, 0, 65549, 18, 0, 65550, 18, 0, 65551, 18, 0, 65552, 18, 0, 65553, 18, 0, 65554, 18, 0, 65555, 18, 0, 131072, 18, 0, 131073, 18, 0, 131074, 18, 0, 131075, 18, 0, 131076, 18, 0, 131077, 18, 0, 131078, 18, 0, 131079, 18, 0, 131080, 18, 0, 131081, 18, 0, 131082, 18, 0, 131083, 18, 0, 131084, 18, 0, 131085, 18, 0, 131086, 18, 0, 131087, 18, 0, 131088, 18, 0, 131089, 18, 0, 131090, 18, 0, 131091, 18, 0, 196608, 18, 0, 196609, 18, 0, 196610, 18, 0, 196611, 18, 0, 196612, 18, 0, 196613, 18, 0, 196614, 18, 0, 196615, 18, 0, 196616, 18, 0, 196617, 18, 0, 196618, 18, 0, 196619, 18, 0, 196620, 18, 0, 196621, 18, 0, 196622, 18, 0, 196623, 18, 0, 196624, 18, 0, 196625, 18, 0, 196626, 18, 0, 196627, 18, 0, 262144, 18, 0, 262145, 18, 0, 262146, 18, 0, 262147, 18, 0, 262148, 18, 0, 262149, 18, 0, 262150, 18, 0, 262151, 18, 0, 262152, 18, 0, 262153, 18, 0, 262154, 18, 0, 262155, 18, 0, 262156, 18, 0, 262157, 18, 0, 262158, 18, 0, 262159, 18, 0, 262160, 18, 0, 262161, 18, 0, 262162, 18, 0, 262163, 18, 0, 327680, 18, 0, 327681, 18, 0, 327682, 18, 0, 327683, 18, 0, 327684, 18, 0, 327685, 18, 0, 327686, 18, 0, 327687, 18, 0, 327688, 18, 0, 327689, 18, 0, 327690, 18, 0, 327691, 18, 0, 327692, 18, 0, 327693, 18, 0, 327694, 18, 0, 327695, 18, 0, 327696, 18, 0, 327697, 18, 0, 327698, 18, 0, 327699, 18, 0, 393216, 18, 0, 393217, 18, 0, 393218, 18, 0, 393219, 18, 0, 393220, 18, 0, 393221, 18, 0, 393222, 18, 0, 393223, 18, 0, 393224, 18, 0, 393225, 18, 0, 393226, 18, 0, 393227, 18, 0, 393228, 18, 0, 393229, 18, 0, 393230, 18, 0, 393231, 18, 0, 393232, 18, 0, 393233, 18, 0, 393234, 18, 0, 393235, 18, 0, 458752, 18, 0, 458753, 14, 0, 458755, 18, 0, 458756, 18, 0, 458757, 18, 0, 458758, 18, 0, 458759, 18, 0, 458760, 18, 0, 458761, 18, 0, 458764, 18, 0, 458765, 18, 0, 458766, 18, 0, 458767, 18, 0, 458768, 3, 0, 458770, 18, 0, 458771, 18, 0, 524288, 18, 0, 524291, 18, 0, 524292, 9, 0, 524293, 11, 0, 524294, 10, 0, 524295, 9, 0, 524296, 18, 0, 524297, 18, 0, 524298, 7, 0, 524300, 18, 0, 524301, 18, 0, 524302, 18, 0, 524303, 18, 0, 524306, 18, 0, 524307, 18, 0, 589824, 15, 0, 589825, 15, 0, 589826, 15, 0, 589827, 15, 0, 589828, 15, 0, 589829, 15, 0, 589830, 15, 0, 589831, 15, 0, 589832, 15, 0, 589833, 15, 0, 589834, 15, 0, 589835, 15, 0, 589836, 15, 0, 589837, 15, 0, 589838, 15, 0, 589839, 15, 0, 589840, 15, 0, 589841, 15, 0, 589842, 15, 0, 589843, 15, 0 )

[node name="TileMap2" type="TileMap" parent="."]
z_index = -1
tile_set = SubResource( 2 )
format = 1
tile_data = PoolIntArray( 458753, 2, 0, 458754, 2, 0, 458762, 2, 0, 458763, 2, 0, 524289, 2, 0, 524290, 2, 0, 524292, 2, 0, 524293, 2, 0, 524294, 2, 0, 524295, 2, 0, 524298, 2, 0, 524299, 2, 0, 524300, 1, 0 )

[node name="Area_Recepcionista" type="Area2D" parent="."]
position = Vector2( 706, 528 )
script = ExtResource( 19 )
__meta__ = {
"_edit_group_": true
}

[node name="Recepcionista" type="Sprite" parent="Area_Recepcionista"]
scale = Vector2( 1.5625, 1.54167 )
texture = ExtResource( 9 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area_Recepcionista"]
position = Vector2( 7.5, 4.5 )
shape = SubResource( 7 )

[node name="Info_Popup" parent="Area_Recepcionista" instance=ExtResource( 24 )]

[node name="Box2" type="Sprite" parent="."]
position = Vector2( 738.5, 549.988 )
scale = Vector2( 2.03125, 2.0479 )
texture = ExtResource( 12 )

[node name="Box" type="Sprite" parent="."]
position = Vector2( 672, 549.988 )
scale = Vector2( 2.125, 2.09153 )
texture = ExtResource( 12 )

[node name="Colisao_Parede_Esquerda" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Colisao_Parede_Esquerda"]
shape = SubResource( 8 )

[node name="Area2D2" type="Area2D" parent="."]
position = Vector2( 121, 510 )
script = ExtResource( 17 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Area2D2"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D2"]
position = Vector2( 4, 2.5 )
shape = SubResource( 6 )

[node name="Info_Popup" parent="Area2D2" instance=ExtResource( 24 )]

[node name="Area2D" type="Area2D" parent="."]
script = ExtResource( 14 )

[node name="Sprite" type="Sprite" parent="Area2D"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 1088.5, 524 )
shape = SubResource( 5 )

[node name="Info_Popup" parent="Area2D" instance=ExtResource( 24 )]

[node name="Colisao_Parede_Direita" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Colisao_Parede_Direita"]
position = Vector2( 1271, -2 )
shape = SubResource( 8 )

[node name="Colisao_Chao" type="StaticBody2D" parent="."]
position = Vector2( 1280, -3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Colisao_Chao"]
position = Vector2( -636, 595 )
shape = SubResource( 4 )

[node name="MainPersonagemMVP" parent="." instance=ExtResource( 3 )]
position = Vector2( 138, 606 )

[node name="PauseMenu" parent="." instance=ExtResource( 18 )]
visible = false
margin_left = 600.0
margin_top = 152.0
margin_right = 600.0
margin_bottom = 152.0

[connection signal="body_entered" from="Area_Recepcionista" to="Area_Recepcionista" method="_on_Area_Recepcionista_body_entered"]
[connection signal="body_exited" from="Area_Recepcionista" to="Area_Recepcionista" method="_on_Area_Recepcionista_body_exited"]
[connection signal="body_entered" from="Area2D2" to="Area2D2" method="_on_Area2D2_body_entered"]
[connection signal="body_exited" from="Area2D2" to="Area2D2" method="_on_Area2D2_body_exited"]
[connection signal="body_entered" from="Area2D" to="Area2D" method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="Area2D" method="_on_Area2D_body_exited"]
